--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
-<body style="background-color:#33475b">
-    hello world
+<head>
+
+<link href="https://fonts.googleapis.com/css?family=Ojuju" rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
+
+<style>
+    body {
+    	background-color: #1e1e2e;
+    }
+    
+    p { color: #cdd6f4; font-family: 'Noto Sans'; font-size: 20px; }
+    h1 { color: #cdd6f4; font-family: "Ojuju"; }
+</style>
+
+<title>Adam Perkowski</title>
+
+</head>
+
+
+<body>
+
+<h1>Adam Perkowski</h1>
+<p>hello world</p>
+
 </body>
