--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
 
 <link href="https://fonts.googleapis.com/css?family=Ojuju" rel='stylesheet'>
@@ -6,10 +8,22 @@
 <style>
     body {
     	background-color: #1e1e2e;
+	    text-align: center;
     }
     
     p { color: #cdd6f4; font-family: 'Noto Sans'; font-size: 20px; }
     h1 { color: #cdd6f4; font-family: "Ojuju"; }
+    a { color: #89b4fa; }
+    a:visited { color: #cba6f7; }
+
+    footer {
+        position: fixed;
+	    left: 0;
+	    bottom: 0;
+	    width: 100%;
+	    background-color: #313244;
+	    text-align: center;
+    }
 </style>
 
 <title>Adam Perkowski</title>
@@ -22,4 +36,9 @@
 <h1>Adam Perkowski</h1>
 <p>hello world</p>
 
+<footer>
+	<p>this website is still in early developement stage if u didnt notice lol<br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
+</footer>
+
 </body>
+</html>
