--- a/index.html
+++ b/index.html
@@ -2,29 +2,10 @@
 <html>
 <head>
 
+<link rel="stylesheet" href="style.css">
+
 <link href="https://fonts.googleapis.com/css?family=Ojuju" rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
-
-<style>
-    body {
-    	background-color: #1e1e2e;
-	    text-align: center;
-    }
-    
-    p { color: #cdd6f4; font-family: 'Noto Sans'; font-size: 20px; }
-    h1 { color: #cdd6f4; font-family: "Ojuju"; }
-    a { color: #89b4fa; }
-    a:visited { color: #cba6f7; }
-
-    footer {
-        position: fixed;
-	    left: 0;
-	    bottom: 0;
-	    width: 100%;
-	    background-color: #313244;
-	    text-align: center;
-    }
-</style>
 
 <title>Adam Perkowski</title>
 
