--- a/index.html
+++ b/index.html
@@ -12,10 +12,22 @@
 </head>
 
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SP9YNSMGHW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SP9YNSMGHW');
+</script>
+
+
 <body>
 
 <h1>Adam Perkowski</h1>
 <p>hello world</p>
+<p><b>Links:</b><br> • <a href="https://github.com/adamperkowski">GitHub</a></p>
 
 <footer>
 	<p>this website is still in early developement stage if u didnt notice lol<br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
