--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 <body>
 
 <h1>Adam Perkowski</h1>
-<p>hello world</p>
-<p><b>Links:</b><br> • <a href="https://github.com/adamperkowski">GitHub</a></p>
+<h3>hello world</h3>
+<p>I'm a programmer with 6-year experience. I work in C++, Rust, Python, HTML and x86_64 Assembly.</p>
+<p><b>Links:</b><br> • <a href="https://github.com/adamperkowski" target="_blank">GitHub</a><br> • <a href="https://www.instagram.com/adas_per" target="_blank">Instagram</a></p>
 
 <footer>
 	<p>this website is still in early developement stage if u didnt notice lol<br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
