--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <h1>Adam Perkowski</h1>
 <h3>hello world</h3>
-<p>I'm a programmer with 6-year experience. I work in C++, Rust, Python, HTML and x86_64 Assembly.</p>
+<p>I'm a programmer with 6 years of experience. I work in C++, Rust, Python, HTML and x86_64 Assembly.</p>
 <iframe src="https://github-readme-stats.vercel.app/api?username=adamperkowski&show=prs_merged&show_icons=true&theme=transparent" width="467", height="220"></iframe><iframe src="https://github-readme-stats.vercel.app/api/top-langs/?username=adamperkowski&layout=donut&theme=transparent" width="350" height="215"></iframe>
 <p><b>Links:</b><br> • <a href="https://github.com/adamperkowski" target="_blank">GitHub</a><br> • <a href="https://www.instagram.com/adas_per" target="_blank">Instagram</a></p>
 
