--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
 
 <title>Adam Perkowski</title>
+<link rel="icon" type="image/x-icon" href="img/favicon.ico">
 
 </head>
 
