--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <title>Adam Perkowski</title>
 <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 
+<meta name="google-site-verification" content="aK0ae0NioXXWaMuOT2N5Nkh0gGMouKwdylGaxYrJswM" />
+
 </head>
 
 
