--- a/index.html
+++ b/index.html
@@ -34,9 +34,21 @@
 <iframe src="https://github-readme-stats.vercel.app/api?username=adamperkowski&show=prs_merged&show_icons=true&theme=transparent" width="467", height="220"></iframe><iframe src="https://github-readme-stats.vercel.app/api/top-langs/?username=adamperkowski&layout=donut&theme=transparent" width="350" height="215"></iframe>
 <p><b>Links:</b><br> • <a href="https://github.com/adamperkowski" target="_blank">GitHub</a><br> • <a href="https://www.instagram.com/adas_per" target="_blank">Instagram</a></p>
 
+<h3><a href="donate">Donate</a></h3>
+
 <footer>
 	<p>this website is still in early developement stage if u didnt notice lol<br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
 </footer>
+
+<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('xx0a_q', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Donate',
+    'floating-chat.donateButton.background-color': '#323842',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
 
 </body>
 </html>
