--- a/donate/index.html
+++ b/donate/index.html
@@ -35,7 +35,7 @@
 <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#181825', 'R6R7W4TLY');kofiwidget2.draw();</script>
 
 <h3><b>Crypto:</b></h3>
-<p>Monero (XMR) | 43xyn5nVAxVWswSLYU9NWq62GQHWsLGj6fzGXmYDVWkbgm6uh42CXxJH5vcM7KoN1LQzog5rVPoz7eK3sMR8vU764BMbbj4</p>
+<p><b>Monero (XMR)</b> | 43xyn5nVAxVWswSLYU9NWq62GQHWsLGj6fzGXmYDVWkbgm6uh42CXxJH5vcM7KoN1LQzog5rVPoz7eK3sMR8vU764BMbbj4<br><br><b>ERC-20 (ETH, MATIC, etc.)</b> | 0x8cb2C38690bc6757727b26558e078a711c1127cB<br><br><b>Solana (SOL)</b> | HKWUhKr1H4tSQ2kN83oTXhLsbeAdHQBS4EPei76eFdz1</p>
 
 <footer>
 	<p>this website is still in early developement stage if u didnt notice lol<br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
