--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <h3>hello world</h3>
 <p>I'm a programmer with 6 years of experience. I work in C++, Rust, Python, HTML and x86_64 Assembly.</p>
 <iframe src="https://github-readme-stats.vercel.app/api?username=adamperkowski&show=prs_merged&show_icons=true&theme=transparent" width="467", height="220"></iframe><iframe src="https://github-readme-stats.vercel.app/api/top-langs/?username=adamperkowski&layout=donut&theme=transparent" width="350" height="215"></iframe>
-<p><b>Links:</b><br> • <a href="https://github.com/adamperkowski" target="_blank">GitHub</a><br> • <a href="https://www.instagram.com/adas_per" target="_blank">Instagram</a></p>
+<p><b>Links:</b><br> • <a href="https://github.com/adamperkowski" target="_blank">GitHub</a><br> • <a href="https://www.instagram.com/adas_per" target="_blank">Instagram</a><br> • <a href="https://signal.me/#eu/szdQpRusw7foy/Xejet4yPQHABW3D3d0BxO4VrQ0G7sddryV9KFAT4tOayR55f0U" target="_blank">Signal</a></p>
 
 <h3><a href="donate">Donate</a></h3>
 
