ughh javascript brrrr

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h1>Adam Perkowski</h1>
 <h3>hello world</h3>
 <p>I'm a programmer with 6 years of experience. I work in C++, Rust, Python, HTML and x86_64 Assembly.</p>
-<iframe src="https://readme-stats-ulgx.vercel.app/api?username=adamperkowski&show=prs_merged&show_icons=true&theme=transparent" width="467", height="220"></iframe><iframe src="https://readme-stats-ulgx.vercel.app/api/top-langs/?username=adamperkowski&layout=donut&theme=transparent" width="350" height="215"></iframe>
+<iframe src="https://readme-stats-ulgx.vercel.app/api?username=adamperkowski&show=prs_merged&show_icons=true&theme=transparent" width="467", height="220"></iframe><iframe src="https://readme-stats-ulgx.vercel.app/api/top-langs/?username=adamperkowski&hide=javascript&layout=donut&theme=transparent" width="350" height="215"></iframe>
 <p><b>Links:</b><br><a href="https://github.com/adamperkowski" target="_blank">GitHub</a> • <a href="https://www.instagram.com/adas_per" target="_blank">Instagram</a> • <a href="https://mastodon.social/@xx0a_q">Mastodon</a> • <a href="https://twitter.com/xx0a_q">X</a> • <a href="https://signal.me/#eu/szdQpRusw7foy/Xejet4yPQHABW3D3d0BxO4VrQ0G7sddryV9KFAT4tOayR55f0U" target="_blank">Signal</a><br>Discord • @xx0a_q</p>
 
 <h3><a href="donate">Donate</a></h3>
