--- a/donate/index.html
+++ b/donate/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="../style.css">
 
 <link href="https://fonts.googleapis.com/css?family=Ojuju" rel='stylesheet'>
-<link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet'>
 
 <title>Donate | Adam Perkowski</title>
 <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
