--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 $('.wakatimeiframe').css('height', $(window).height()+'px');
 </script> -->
 
-<p><b>Links:</b><br><a href="https://github.com/adamperkowski" target="_blank">GitHub</a> • <a href="https://www.instagram.com/adas_per" target="_blank">Instagram</a> • <a href="https://mastodon.social/@xx0a_q">Mastodon</a> • <a href="https://twitter.com/xx0a_q">X</a> • <a href="https://signal.me/#eu/szdQpRusw7foy/Xejet4yPQHABW3D3d0BxO4VrQ0G7sddryV9KFAT4tOayR55f0U" target="_blank">Signal</a><br>Discord • @xx0a_q</p>
+<p><b>Links:</b><br><a href="https://github.com/adamperkowski" target="_blank">GitHub</a> • <a href="https://www.instagram.com/adas_per" target="_blank">Instagram</a> • <a href="https://mastodon.social/@xx0a_q">Mastodon</a> • <a href="https://twitter.com/xx0a_q">X</a><!-- • <a href="https://signal.me/#eu/szdQpRusw7foy/Xejet4yPQHABW3D3d0BxO4VrQ0G7sddryV9KFAT4tOayR55f0U" target="_blank">Signal</a>--><br>Discord • @xx0a_q</p>
 
 <h3><a href="donate">Donate</a></h3>
 
