now its perfect

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 <h1>Adam Perkowski</h1>
 <h3>hello world</h3>
 <p>I'm a programmer with 6 years of experience. I work in C++, Rust, Python, HTML and x86_64 Assembly.</p>
-<iframe src="https://readme-stats-ulgx.vercel.app/api?username=adamperkowski&show=prs_merged&show_icons=true&theme=transparent" width="467", height="220" frameBorder="0"></iframe><iframe src="https://readme-stats-ulgx.vercel.app/api/top-langs/?username=adamperkowski&hide=javascript&layout=donut&theme=transparent" width="350" height="215" frameBorder="0"></iframe>
+<iframe src="https://readme-stats-ulgx.vercel.app/api?username=adamperkowski&show=prs_merged&show_icons=true&theme=transparent" width="467" height="220"></iframe><iframe src="https://readme-stats-ulgx.vercel.app/api/top-langs/?username=adamperkowski&hide=javascript&layout=donut&theme=transparent" width="350" height="215"></iframe>
 <br>
 
-<iframe src="https://github-readme-stats.vercel.app/api/wakatime?username=adamperkowski&layout=compact&theme=transparent" width="495" height="20%" scroll="true" frameBorder="0"></iframe>
+<iframe src="https://github-readme-stats.vercel.app/api/wakatime?username=adamperkowski&layout=compact&theme=transparent" width="495" height=20%></iframe>
 <!-- <script type="text/javascript" language="javascript"> 
 $('.wakatimeiframe').css('height', $(window).height()+'px');
 </script> -->
