turns out it was not and im even more stupid

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <iframe src="https://readme-stats-ulgx.vercel.app/api?username=adamperkowski&show=prs_merged&show_icons=true&theme=transparent" width="467" height="220"></iframe><iframe src="https://readme-stats-ulgx.vercel.app/api/top-langs/?username=adamperkowski&hide=javascript&layout=donut&theme=transparent" width="350" height="215"></iframe>
 <br>
 
-<iframe src="https://github-readme-stats.vercel.app/api/wakatime?username=adamperkowski&layout=compact&theme=transparent" width="495" height=20%></iframe>
+<iframe src="https://github-readme-stats.vercel.app/api/wakatime?username=adamperkowski&layout=compact&theme=transparent" width="495"></iframe>
 <!-- <script type="text/javascript" language="javascript"> 
 $('.wakatimeiframe').css('height', $(window).height()+'px');
 </script> -->
