--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ $('.wakatimeiframe').css('height', $(window).height()+'px');
 
 <p><b>Links:</b><br><a href="https://github.com/PW-Sync" target="_blank">Para Wodna Sync project</a><br><br><a href="https://github.com/adamperkowski" target="_blank">GitHub</a> • <a href="https://mastodon.social/@xx0a_q">Mastodon</a> • <a href="https://twitter.com/xx0a_q">X</a><!-- • <a href="https://signal.me/#eu/szdQpRusw7foy/Xejet4yPQHABW3D3d0BxO4VrQ0G7sddryV9KFAT4tOayR55f0U" target="_blank">Signal</a>--><br>Discord • @xx0a_q</p>
 
+<h3><a href="https://github.com/adamperkowski/adamperkowski/blob/main/pub_key" target="_blank">GPG RSA Public Key</a></h3>
 <h3><a href="donate">Donate</a></h3>
 
 <footer>
