--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <!-- <script type="text/javascript" language="javascript"> 
 $('.wakatimeiframe').css('height', $(window).height()+'px');
 </script> -->
+<p><a href="https://wakatime.com/@adamperkowski" target="_blank">Full Stats</a>
 
 <p><b>Links:</b><br><a href="https://github.com/PW-Sync" target="_blank">🌫️ Para Wodna Sync project</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://mastodon.social/@xx0a_q">Ⓜ️ Mastodon</a> • <a href="https://twitter.com/xx0a_q">🇽</a><!-- • <a href="https://signal.me/#eu/szdQpRusw7foy/Xejet4yPQHABW3D3d0BxO4VrQ0G7sddryV9KFAT4tOayR55f0U" target="_blank">Signal</a>--><br>Discord • @xx0a_q</p>
 
