--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta name="google-site-verification" content="aK0ae0NioXXWaMuOT2N5Nkh0gGMouKwdylGaxYrJswM" />
 
-<!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js)
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SP9YNSMGHW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -21,6 +21,7 @@
 
   gtag('config', 'G-SP9YNSMGHW');
 </script>
+-->
 
 </head>
 
@@ -29,16 +30,12 @@
 <h1>Adam Perkowski</h1>
 <h3>hello world</h3>
 <p>I'm a programmer with 6 years of experience. I work in C++, Rust, Python, HTML, JavaScript and x86_64 Assembly.</p>
-<!-- <iframe src="https://readme-stats-ulgx.vercel.app/api?username=adamperkowski&show=prs_merged&show_icons=true&theme=transparent" width="467" height="220"></iframe><iframe src="https://readme-stats-ulgx.vercel.app/api/top-langs/?username=adamperkowski&hide=javascript&layout=donut&theme=transparent" width="350" height="215"></iframe>
-<br> -->
 
 <iframe src="https://github-readme-stats.vercel.app/api/wakatime?username=adamperkowski&layout=compact&theme=transparent" width="495" height="180"></iframe>
-<!-- <script type="text/javascript" language="javascript"> 
-$('.wakatimeiframe').css('height', $(window).height()+'px');
-</script> -->
+
 <p><a href="https://wakatime.com/@adamperkowski" target="_blank">Full Stats</a>
 
-<p><b>Links:</b><br><a href="https://github.com/PW-Sync" target="_blank">🌫️ Para Wodna Sync project</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://mastodon.social/@xx0a_q">Ⓜ️ Mastodon</a> • <a href="https://twitter.com/xx0a_q">🇽</a><!-- • <a href="https://signal.me/#eu/szdQpRusw7foy/Xejet4yPQHABW3D3d0BxO4VrQ0G7sddryV9KFAT4tOayR55f0U" target="_blank">Signal</a>--><br>Discord • @xx0a_q</p>
+<p><b>Links:</b><br><a href="https://github.com/PW-Sync" target="_blank">🌫️ Para Wodna Sync project</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://mastodon.social/@xx0a_q">Ⓜ️ Mastodon</a> • <a href="https://twitter.com/xx0a_q">🇽</a><br>Discord • @xx0a_q</p>
 
 <h3><a href="https://github.com/adamperkowski/adamperkowski/blob/main/pub_key" target="_blank">🔑 GPG RSA Public Key</a></h3>
 <h3><a href="donate">💵 Donate</a></h3>
