--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
 <p><b>Links:</b><br><a href="https://github.com/PW-Sync" target="_blank">🌫️ Para Wodna Sync project</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://mastodon.social/@xx0a_q">Ⓜ️ Mastodon</a> • <a href="https://twitter.com/xx0a_q">🇽</a><br>Discord • @xx0a_q</p>
 
-<h3><a href="https://github.com/adamperkowski/adamperkowski/blob/main/pub_key" target="_blank">🔑 GPG RSA Public Key</a></h3>
+<h3><a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/ecc_pub_key" target="_blank">🔑 ECC Public Key</a>
+<br>
+<a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/pub_key" target="_blank">🔒 RSA Public Key</a> (not valid anymore!)</h3>
 <h3><a href="donate">💵 Donate</a></h3>
 
 <footer>
