add e-mail link & remove other bullcrap

--- a/donate/index.html
+++ b/donate/index.html
@@ -32,13 +32,15 @@
 <h2>Donate</h2>
 <h3>If you want to support the work I do, feel free to donate through any of the following: </h3>
 
-<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#181825', 'R6R7W4TLY');kofiwidget2.draw();</script><p>or <a href="https://paypal.me/afkpx">directly through PayPal</a></p>
+<br>
 
 <h3><b>Crypto:</b></h3>
 <p><b>Monero (XMR)</b> | 43xyn5nVAxVWswSLYU9NWq62GQHWsLGj6fzGXmYDVWkbgm6uh42CXxJH5vcM7KoN1LQzog5rVPoz7eK3sMR8vU764BMbbj4<br><br><b>ERC-20 (ETH, MATIC, etc.)</b> | 0x8cb2C38690bc6757727b26558e078a711c1127cB<br><br><b>Solana (SOL)</b> | HKWUhKr1H4tSQ2kN83oTXhLsbeAdHQBS4EPei76eFdz1</p>
 
+<br><p>or <a href="https://paypal.me/afkpx">Directly through PayPal</a></p>
+
 <footer>
-	<p>this website is still in early developement stage if u didnt notice lol<br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
+        <p><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
 </footer>
 
 </body>
