--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <p><a href="https://wakatime.com/@adamperkowski" target="_blank">Full Stats</a>
 
-<p><b>Links:</b><br><a href="https://github.com/PW-Sync" target="_blank">🌫️ Para Wodna Sync project</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://mastodon.social/@xx0a_q">Ⓜ️ Mastodon</a> • <a href="https://twitter.com/xx0a_q">🇽</a><br>Discord • @xx0a_q</p>
+<p><b>Links:</b><br><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/PW-Sync" target="_blank">🌫️ Para Wodna Sync project</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://mastodon.social/@xx0a_q">Ⓜ️ Mastodon</a><br>Discord • @xx0a_q</p>
 
 <h3><a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/ecc_pub_key" target="_blank">🔑 ECC Public Key</a>
 <br>
@@ -43,18 +43,8 @@
 <h3><a href="donate">💵 Donate</a></h3>
 
 <footer>
-	<p>this website is still in early developement stage if u didnt notice lol<br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
+	<p><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
 </footer>
-
-<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<script>
-  kofiWidgetOverlay.draw('xx0a_q', {
-    'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Donate',
-    'floating-chat.donateButton.background-color': '#323842',
-    'floating-chat.donateButton.text-color': '#fff'
-  });
-</script>
 
 </body>
 </html>
