--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
 <p><a href="https://wakatime.com/@adamperkowski" target="_blank">Full Stats</a>
 
-<p><b>Links:</b><br><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/PW-Sync" target="_blank">🌫️ Para Wodna Sync project</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://mastodon.social/@xx0a_q">Ⓜ️ Mastodon</a><br>Discord • @xx0a_q</p>
+<h3>Links:</h3><p><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://mastodon.social/@xx0a_q">Ⓜ️ Mastodon</a><br>Discord • @xx0a_q</p>
 
 <h3><a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/ecc_pub_key" target="_blank">🔑 ECC Public Key</a>
 <br>
-<a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/pub_key" target="_blank">🔒 RSA Public Key</a> (not valid anymore!)</h3>
+<p><a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/pub_key" target="_blank">🔒 RSA Public Key</a> (not valid anymore!)</p>
 <h3><a href="donate">💵 Donate</a></h3>
 
 <footer>
