--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <h1>Adam Perkowski</h1>
 <h3>hello world</h3>
-<p>I'm a programmer with 6 years of experience. I work in C++, Rust, Python, HTML, JavaScript and x86_64 Assembly.</p>
+<p>I'm a programmer with 6 years of experience. I work in C++, Rust, Python, HTML, JavaScript and x86_64 Assembly.<br>Looking to collaborate on any fun project. (i love Rust btw)</p>
 
 <iframe src="https://github-readme-stats.vercel.app/api/wakatime?username=adamperkowski&layout=compact&theme=transparent" width="495" height="180"></iframe>
 
