--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <p><a href="https://wakatime.com/@adamperkowski" target="_blank">Full Stats</a>
 
-<h3>Links:</h3><p><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://mastodon.social/@xx0a_q" rel="me">Ⓜ️ Mastodon</a><br>Discord • @xx0a_q</p>
+<h3>Links:</h3><p><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://floss.social/@xx0a_q" rel="me">Ⓜ️ Mastodon</a><br>Discord • @xx0a_q</p>
 
 <p><a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/ecc_pub_key" target="_blank">🔑 ECC Public Key</a>
 <br>
