--- a/donate/index.html
+++ b/donate/index.html
@@ -30,11 +30,15 @@
 
 <h1>Adam Perkowski</h1>
 <h2>Donate</h2>
-<h3>If you want to support the work I do, feel free to donate through any of the following: </h3>
+<h3>If you want to support the work I do, feel free to donate through any of the following:
 
-<br>
+<br><br><br>
 
-<h3><b>Crypto:</b></h3>
+<b><a href="https://github.com/sponsors/adamperkowski" target="_blank">GitHub Sponsors</a></b>
+
+<br><br><br>
+
+<b>Crypto:</b></h3>
 <p><b>Monero (XMR)</b> | 43xyn5nVAxVWswSLYU9NWq62GQHWsLGj6fzGXmYDVWkbgm6uh42CXxJH5vcM7KoN1LQzog5rVPoz7eK3sMR8vU764BMbbj4<br><br><b>ERC-20 (ETH, MATIC, etc.)</b> | 0x8cb2C38690bc6757727b26558e078a711c1127cB<br><br><b>Solana (SOL)</b> | HKWUhKr1H4tSQ2kN83oTXhLsbeAdHQBS4EPei76eFdz1</p>
 
 <br><p>or <a href="https://paypal.me/afkpx">Directly through PayPal</a></p>
