--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
 <h3>hello world</h3>
 <p>I'm a programmer with 6 years of experience. I work in Rust, C, C++, Python, HTML, JavaScript and x86_64 Assembly.<br>Looking to collaborate on any fun project. (i love Rust btw)</p>
 
-<iframe src="https://github-readme-stats.vercel.app/api/wakatime?username=adamperkowski&layout=compact&theme=transparent" width="495" height="180"></iframe>
+<!-- <iframe src="https://github-readme-stats.vercel.app/api/wakatime?username=adamperkowski&layout=compact&theme=transparent" width="495" height="180"></iframe> -->
+<a href="https://wakatime.com/@adamperkowski" target="_blank"><img src="https://wakatime.com/badge/user/018ee348-2a71-4b7e-91e6-4ac78f3e6e37.svg"></a>
+<br>
+<img alt="GitHub followers" src="https://img.shields.io/github/followers/adamperkowski?style=flat">
+<img alt="GitHub User's stars" src="https://img.shields.io/github/stars/adamperkowski?style=flat">
+<img alt="GitHub Sponsors" src="https://img.shields.io/github/sponsors/adamperkowski?style=flat">
 
-<p><a href="https://wakatime.com/@adamperkowski" target="_blank">Full Stats</a>
+<!-- <p><a href="https://wakatime.com/@adamperkowski" target="_blank">Full Coding Stats</a> -->
 
 <h3>Links:</h3><p><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://floss.social/@xx0a_q" rel="me">Ⓜ️ Mastodon</a><br>Discord • @xx0a_q</p>
 
@@ -41,8 +46,10 @@
 <a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/pub_key" target="_blank">🔒 RSA Public Key</a> (not valid anymore!)</p>
 <h3><a href="donate">💵 Donate</a></h3>
 
+<img src="https://spotify-github-profile.kittinanx.com/api/view?uid=31j7fpw3stn5mo6almqx6m3cwjca&cover_image=true&theme=novatorem&show_offline=true&background_color=1e1e2e&interchange=true&bar_color=f38ba8&bar_color_cover=true">
+
 <footer>
-	<p><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
+	<p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
 </footer>
 
 </body>
