--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <!-- <iframe src="https://github-readme-stats.vercel.app/api/wakatime?username=adamperkowski&layout=compact&theme=transparent" width="495" height="180"></iframe> -->
 <a href="https://wakatime.com/@adamperkowski" target="_blank"><img alt="WakaTime Hours" src="https://wakatime.com/badge/user/018ee348-2a71-4b7e-91e6-4ac78f3e6e37.svg"></a>
 <br>
-<img alt="GitHub Followers" title="GitHub Followers" src="https://img.shields.io/github/followers/adamperkowski?style=flat">
-<img alt="GitHub User's stars" title="GitHub Stars" src="https://img.shields.io/github/stars/adamperkowski?style=flat">
-<img alt="GitHub Sponsors" title="GitHub Sponsors" src="https://img.shields.io/github/sponsors/adamperkowski?style=flat">
+<img alt="GitHub Followers" title="GitHub Followers" src="https://img.shields.io/github/followers/adamperkowski?style=flat&color=%23f38ba8&labelColor=%231e1e2e">
+<img alt="GitHub User's stars" title="GitHub Stars" src="https://img.shields.io/github/stars/adamperkowski?style=flat&color=%23f38ba8&labelColor=%231e1e2e">
+<img alt="GitHub Sponsors" title="GitHub Sponsors" src="https://img.shields.io/github/sponsors/adamperkowski?style=flat&color=%23f38ba8&labelColor=%231e1e2e">
 
 <!-- <p><a href="https://wakatime.com/@adamperkowski" target="_blank">Full Coding Stats</a> -->
 
