--- a/donate/index.html
+++ b/donate/index.html
@@ -28,7 +28,7 @@
 
 <body>
 
-<h1>Adam Perkowski</h1>
+<h1><a href="https://adamperkowski.github.io" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></h1>
 <h3>Donate</h3>
 <p>If you want to support the work I do, feel free to donate through any of the following:
 
