--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-<h1>Adam Perkowski</h1>
+<h1><a href="https://adamperkowski.github.io" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></h1>
 <h3>hello world</h3>
 <p>I'm a programmer with 6 years of experience. I work in Rust, C, C++, Python, HTML, JavaScript and x86_64 Assembly.<br>Looking to collaborate on any fun project. (i love Rust btw)</p>
 
