--- a/donate/index.html
+++ b/donate/index.html
@@ -13,23 +13,23 @@
 
 <body>
 
-<h1><a href=".." style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></h1>
-<h3>Donate</h3>
-<p>If you want to support the work I do, feel free to donate through any of the following:
+<h1 lang="en"><a href=".." rel=“canonical” hreflang="en" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></h1>
+<h3 lang="en">Donate</h3>
+<p lang="en">If you want to support the work I do, feel free to donate through any of the following:
 
 <br><br>
 
-<b><a href="https://github.com/sponsors/adamperkowski" target="_blank">GitHub Sponsors</a></b>
+<b lang="en"><a href="https://github.com/sponsors/adamperkowski" target="_blank">GitHub Sponsors</a></b>
 
 <br><br>
 
 <b>Crypto:</b></p>
-<p><b>Monero (XMR)</b> | 43xyn5nVAxVWswSLYU9NWq62GQHWsLGj6fzGXmYDVWkbgm6uh42CXxJH5vcM7KoN1LQzog5rVPoz7eK3sMR8vU764BMbbj4<br><br><b>ERC-20 (ETH, MATIC, etc.)</b> | 0x8cb2C38690bc6757727b26558e078a711c1127cB<br><br><b>Solana (SOL)</b> | HKWUhKr1H4tSQ2kN83oTXhLsbeAdHQBS4EPei76eFdz1
+<p lang="en"><b>Monero (XMR)</b> | 43xyn5nVAxVWswSLYU9NWq62GQHWsLGj6fzGXmYDVWkbgm6uh42CXxJH5vcM7KoN1LQzog5rVPoz7eK3sMR8vU764BMbbj4<br><br><b>ERC-20 (ETH, MATIC, etc.)</b> | 0x8cb2C38690bc6757727b26558e078a711c1127cB<br><br><b>Solana (SOL)</b> | HKWUhKr1H4tSQ2kN83oTXhLsbeAdHQBS4EPei76eFdz1
 
-<br><br>or <a href="https://paypal.me/afkpx">Directly through PayPal</a></p>
+<br><br>or <a href="https://paypal.me/afkpx" hreflang="en">Directly through PayPal</a></p>
 
 <footer>
-        <p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU General Public License v3</a> :)</p>
+        <p lang="en" style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3</a> :)</p>
 </footer>
 
 </body>
