--- a/donate/index.html
+++ b/donate/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+<link rel="canonical" href="https://adamperkowski.github.io">
+
 <link rel="stylesheet" href="../style.css">
 
 <link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet'>
@@ -13,7 +15,7 @@
 
 <body>
 
-<h1><a href=".." rel=“canonical” hreflang="en" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></h1>
+<h1><a href=".." hreflang="en" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></h1>
 <h3>Donate</h3>
 <p>If you want to support the work I do, feel free to donate through any of the following:
 
