--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+<link rel="canonical" href="https://adamperkowski.github.io">
+
 <link rel="stylesheet" href="style.css">
 
 <link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet'>
