--- a/donate/index.html
+++ b/donate/index.html
@@ -9,7 +9,7 @@
 <link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet'>
 
 <title>Donate | Adam Perkowski</title>
-<link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+<link rel="icon" type="image/x-icon" href="../favicon.ico">
 
 </head>
 
