Add privacy policy and improve formatting

--- a/donate/index.html
+++ b/donate/index.html
@@ -15,23 +15,24 @@
 
 <body>
 
-<h1><a href=".." hreflang="en" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></h1>
-<h3>Donate</h3>
+<h1><b><a href=".." hreflang="en" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></b></h1>
+<h1>Donate</h1>
 <p>If you want to support the work I do, feel free to donate through any of the following:
 
 <br><br>
 
 <b><a href="https://github.com/sponsors/adamperkowski" target="_blank">GitHub Sponsors</a></b>
 
-<br><br>
+<br>
+</p>
 
-<b>Crypto:</b></p>
+<h3>Crypto:</h3>
 <p><b>Monero (XMR)</b> | 43xyn5nVAxVWswSLYU9NWq62GQHWsLGj6fzGXmYDVWkbgm6uh42CXxJH5vcM7KoN1LQzog5rVPoz7eK3sMR8vU764BMbbj4<br><br><b>ERC-20 (ETH, MATIC, etc.)</b> | 0x8cb2C38690bc6757727b26558e078a711c1127cB<br><br><b>Solana (SOL)</b> | HKWUhKr1H4tSQ2kN83oTXhLsbeAdHQBS4EPei76eFdz1
 
 <br><br>or <a href="https://paypal.me/afkpx" hreflang="en">Directly through PayPal</a></p>
 
 <footer>
-        <p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski<br>Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3</a> :)</p>
+        <p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski. Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3</a> :)<br><a href="privacy">Privacy Policy</a></p>
 </footer>
 
 </body>
