--- a/donate/index.html
+++ b/donate/index.html
@@ -32,7 +32,7 @@
 <br><br>or <a href="https://paypal.me/afkpx" hreflang="en">Directly through PayPal</a></p>
 
 <footer>
-        <p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski. Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3</a> :)<br><a href="privacy">Privacy Policy</a></p>
+        <p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski. Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3</a> :)<br><a href="../privacy">Privacy Policy</a></p>
 </footer>
 
 </body>
