--- a/donate/index.html
+++ b/donate/index.html
@@ -17,6 +17,7 @@
 
 <h1><b><a href=".." hreflang="en" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></b></h1>
 <h1>Donate</h1>
+<p>Currently raising money for a <a href="./pc-build.html">new PC</a>.</p>
 <p>If you want to support the work I do, feel free to donate through any of the following:
 
 <br><br>
