Crafted a tor version

--- a/donate/pc-build.html
+++ b/donate/pc-build.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
 
-<link rel="canonical" href="https://adamperkowski.github.io">
+<link rel="canonical" href="http://adampkt6gmblaajuupqlxtyrfoh5vcpa2fvnwnxpnmzi7sef2adtktyd.onion">
 
 <link rel="stylesheet" href="../style.css">
-
-<link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet'>
 
 <title>PC Build | Donate | Adam Perkowski</title>
 <link rel="icon" type="image/x-icon" href="../favicon.ico">
@@ -17,7 +15,7 @@
 
 <h1><b><a href=".." hreflang="en" style="color: #cdd6f4; text-decoration:none;">Adam Perkowski</a></b></h1>
 
-<h2><a href="https://pcpartpicker.com/list/znkVkJ">PCPartPicker Part List</a></h2>
+<h2><a href="https://pcpartpicker.com/list/znkVkJ">PCPartPicker Part List (CLEARNET)</a></h2>
 <table class="pcpp-part-list">
   <thead>
     <tr>
@@ -132,7 +130,7 @@
 </table>
 
 <footer>
-        <p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski. Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3</a> :)<br><a href="../privacy">Privacy Policy</a></p>
+        <p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code (CLEARNET)</a><br>&#127279; Adam Perkowski. Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3 (CLEARNET)</a> :)<br><a href="../privacy">Privacy Policy</a></p>
 </footer>
 
 </body>
