--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <h1>hello world</h1>
 <p>I'm a programmer with 6 years of experience. I work in Rust, C, C++, Python, HTML, JavaScript and x86_64 Assembly.<br>Looking to collaborate on any fun project. (i love Rust btw)<br>This is a tor mirror.</p>
 
-<h2>Links (CLEARNET):</h2><p><a href="https://github.com/adamperkowski/highlightos" target="_blank">🌄 HighlightOS</a><br><br><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/adamperkowski" target="_blank">🐈‍⬛ GitHub</a> • <a href="https://floss.social/@xx0a_q" rel="me" target="_blank">Ⓜ️ Mastodon</a> • <a href="https://signal.me/#eu/soGztmBh8pJ75fu3ZRkOUc-Zp4bH0BLEaHy_lxWc7Ijs_TBtUitOKbDwMxRJp-Be" target="_blank">📡 Signal</a><br>Discord • @xx0a_q</p>
+<h2>Links (CLEARNET):</h2><p><a href="https://github.com/adamperkowski/highlightos" target="_blank">HighlightOS</a><br><br><a href="mailto:adas1per@protonmail.com">adas1per@protonmail.com</a><br><br><a href="https://github.com/adamperkowski" target="_blank">GitHub</a> | <a href="https://floss.social/@xx0a_q" rel="me" target="_blank">Mastodon</a> | <a href="https://signal.me/#eu/soGztmBh8pJ75fu3ZRkOUc-Zp4bH0BLEaHy_lxWc7Ijs_TBtUitOKbDwMxRJp-Be" target="_blank">Signal</a><br>Discord | @xx0a_q</p>
 
-<p><a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/ecc_pub_key" target="_blank">🔑 ECC Public Key</a>
+<p><a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/ecc_pub_key" target="_blank">ECC Public Key</a>
 <br>
-<a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/pub_key" target="_blank">🔒 RSA Public Key</a> (not valid anymore!)</p>
-<h3><a href="donate" hreflang="en">💵 Donate (TOR)</a></h3>
+<a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/pub_key" target="_blank">RSA Public Key</a> (not valid anymore!)</p>
+<h3><a href="donate" hreflang="en">Donate (TOR)</a></h3>
 
 <footer>
 	<p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code (CLEARNET)</a><br>&#127279; Adam Perkowski. Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3 (CLEARNET)</a> :)<br><a href="privacy">Privacy Policy</a></p>
