forgot about privacy policy

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
 
-<link rel="canonical" href="https://adamperkowski.github.io">
+<link rel="canonical" href="http://adampkt6gmblaajuupqlxtyrfoh5vcpa2fvnwnxpnmzi7sef2adtktyd.onion">
 
 <link rel="stylesheet" href="../style.css">
-
-<link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet'>
 
 <title>Privacy Policy | Adam Perkowski</title>
 <link rel="icon" type="image/x-icon" href="../favicon.ico">
@@ -29,14 +27,11 @@
 <h2>Third-Party Links</h2>
 <p>My website may contain links to third-party websites. Please note that I am not responsible for the privacy practices of these websites. I strongly encourage you to read the privacy policies of any third-party sites linked here.</p>
 
-<h2>Google Fonts</h2>
-<p>I use Google Fonts to enhance the visual appearance of my website. When you visit this site, your browser may download fonts from Google's servers. Please refer to <a href="https://developers.google.com/fonts/faq/privacy#when_i_embed_google_fonts_in_my_website_via_the_google_fonts_web_api_what_data_does_google_receive_from_my_website_visitors" target="_blank">Google Fonts' privacy policy</a> for more information on how they handle data.</p>
-
 <h2>A Little Note</h2>
 <p>If you're concerned about privacy practices of my or other websites, I strongly recommend the <a href="https://github.com/gorhill/uBlock" target="_blank">uBlock Origin</a> browser extension for blocking various ads and trackers online.</p>
 
 <footer>
-        <p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code</a><br>&#127279; Adam Perkowski. Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3</a> :)</p>
+        <p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code (CLEARNET)</a><br>&#127279; Adam Perkowski. Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3 (CLEARNET)</a> :)</p>
 </footer>
 
 </body>
