--- a/privacy/index.html
+++ b/privacy/index.html
@@ -28,7 +28,7 @@
 <p>My website may contain links to third-party websites. Please note that I am not responsible for the privacy practices of these websites. I strongly encourage you to read the privacy policies of any third-party sites linked here.</p>
 
 <h2>A Little Note</h2>
-<p>If you're concerned about privacy practices of my or other websites, I strongly recommend the <a href="https://github.com/gorhill/uBlock" target="_blank">uBlock Origin</a> browser extension for blocking various ads and trackers online.</p>
+<p>If you're concerned about privacy practices of my or other websites, I strongly recommend the <a href="https://github.com/gorhill/uBlock" target="_blank">uBlock Origin (CLEARNET)</a> browser extension for blocking various ads and trackers online.</p>
 
 <footer>
         <p style="font-size: 14px;"><a href="https://github.com/adamperkowski/adamperkowski.github.io">This website's source code (CLEARNET)</a><br>&#127279; Adam Perkowski. Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" hreflang="en" target="_blank">GNU General Public License v3 (CLEARNET)</a> :)</p>
