--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <br>
 <a href="https://raw.githubusercontent.com/adamperkowski/adamperkowski/main/pub_key" target="_blank">🔒 RSA Public Key</a> (not valid anymore!)</p>
 <h3><a href="donate" hreflang="en">💵 Donate</a></h3>
-<h3><a href="./tormirror">🧅 Tor mirror of this website</a></h3>
+<h3><a href="./tormirror.txt">🧅 Tor mirror of this website</a></h3>
 
 <img alt="Now Listening" title="Now Listening" src="https://spotify-github-profile.kittinanx.com/api/view?uid=31j7fpw3stn5mo6almqx6m3cwjca&cover_image=true&theme=novatorem&show_offline=true&background_color=1e1e2e&interchange=true&bar_color=f38ba8&bar_color_cover=true">
 
