--- a/donate/index.html
+++ b/donate/index.html
@@ -6,6 +6,8 @@
 
 <link rel="stylesheet" href="../style.css">
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Donate | Adam Perkowski</title>
 <link rel="icon" type="image/x-icon" href="../favicon.ico">
 
