--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <link rel="stylesheet" href="style.css">
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Adam Perkowski</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta name="description" content="Adam Perkowski - my personal website. I'm a programmer with 6 years of experience. Looking to collaborate on any fun project. Tor mirror.">
