--- a/donate/pc-build.html
+++ b/donate/pc-build.html
@@ -8,6 +8,8 @@
 
 <link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet'>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>PC Build | Donate | Adam Perkowski</title>
 <link rel="icon" type="image/x-icon" href="../favicon.ico">
 
