--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<link rel="canonical" href="https://adamperkowski.github.io">
+<link rel="canonical" href="https://adamperkowski.dev">
 
 <link rel="stylesheet" href="style.css">
 
